[package]
name = "bastion-vault-gui"
version = "0.1.0"
edition = "2021"
description = "BastionVault Desktop GUI"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
# Native OS directory-picker used by the Add Local Vault modal so
# operators can browse to the data dir instead of typing the path.
tauri-plugin-dialog = "2"
bastion_vault = { path = "../..", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
chrono = "0.4"
dirs = "6"
hex = "0.4"
sha2 = "0.10"
serde_cbor = "0.11"
authenticator = { version = "0.5", default-features = false, features = ["crypto_openssl"] }
webauthn-rs-proto = "0.5"
base64urlsafedata = "0.5"
base64 = "0.22"
# AEAD + KDF + PQC primitives used by the local keystore
# (`src-tauri/src/local_keystore.rs`). ChaCha20-Poly1305 wraps the
# on-disk vault-keys file; HKDF derives sub-keys; ML-KEM provides
# the post-quantum envelope so a future quantum adversary cannot
# retroactively decrypt a captured file even if the symmetric
# master key were somehow recovered. See docs/security-structure.md.
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand = "0.9"
# `bv_crypto` re-exports the vault core's PQC stack: ML-KEM-768 for
# key establishment, a KEM/DEM envelope type, and deterministic
# seed-based keygen. The GUI keystore uses the same crate so the
# PQC primitives match the vault core's (no version skew).
bv_crypto = { path = "../../crates/bv_crypto" }
# YubiKey PIV client — enumerates connected YubiKeys, reads the
# signing cert in slot 9a, and issues RSA-PKCS1 / ECDSA signatures
# on operator-supplied salts. Used by the YubiKey failsafe unlock
# path in `src-tauri/src/local_keystore.rs`.
yubikey = "0.8"
# Needed for the YubiKey provisioning flow (self-signed X.509 cert
# minted into slot 9a when the operator picks an empty-slot card
# from the Add-Local-Vault modal).
x509-cert = { version = "0.2", features = ["builder"] }

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
# Force winapi's "std" feature so winapi::ctypes::c_void unifies with
# std::ffi::c_void. Works around authenticator 0.5.0 Windows build error
# (mismatched types between libc::c_void and winapi::ctypes::c_void).
# See: gui/src-tauri/Cargo.toml, error at authenticator-0.5.0/src/transport/windows/device.rs:144
winapi = { version = "0.3", features = ["std"] }
# Used from the Tauri setup hook to disable WebView2 form autofill, which
# would otherwise persist typed secret values to Chromium's Web Data cache.
# Version pinned to match the transitive dep pulled in by Tauri/wry.
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation"] }

[features]
# Cloud storage targets are on by default in the desktop GUI build so
# the "Cloud Vault" option on the Get Started screen can reach any
# of the four providers without a custom build flag. Server-only
# operators who want a leaner binary can override by disabling the
# cloud_* features at their own workspace level.
default = ["storage_hiqlite", "cloud_targets"]
storage_hiqlite = ["bastion_vault/storage_hiqlite"]
cloud_targets = ["bastion_vault/cloud_targets"]
