[package]
name = "bastion-vault-gui"
version = "0.1.0"
edition = "2021"
description = "BastionVault Desktop GUI"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
# Native OS directory-picker used by the Add Local Vault modal so
# operators can browse to the data dir instead of typing the path.
tauri-plugin-dialog = "2"
# Development-only MCP bridge used by local AI assistants for GUI inspection
# and automation. It is optional, feature-gated, and only registered by
# debug builds when BASTION_TAURI_MCP=1 is set.
tauri-plugin-mcp-bridge = { version = "0.11.1", optional = true }
bastion_vault = { path = "../..", default-features = false }
# rustls is transitively present via the host crate; we list it here
# so the GUI startup can pin the process-level CryptoProvider before
# any TLS-using code runs (rustls 0.23 panics on first use otherwise
# because both `aws_lc_rs` and `ring` end up enabled through feature
# unification across reqwest / ureq / quinn / hyper-rustls).
rustls = { version = "0.23.37", features = ["aws_lc_rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
chrono = "0.4"
dirs = "6"
hex = "0.4"
sha2 = "0.10"
serde_cbor = "0.11"
authenticator = { version = "0.5", default-features = false, features = ["crypto_openssl"] }
webauthn-rs-proto = "0.5"
base64urlsafedata = "0.5"
base64 = "0.22"
# AEAD + KDF + PQC primitives used by the local keystore
# (`src-tauri/src/local_keystore.rs`). ChaCha20-Poly1305 wraps the
# on-disk vault-keys file; HKDF derives sub-keys; ML-KEM provides
# the post-quantum envelope so a future quantum adversary cannot
# retroactively decrypt a captured file even if the symmetric
# master key were somehow recovered. See docs/security-structure.md.
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand = "0.9"
# `bv_crypto` re-exports the vault core's PQC stack: ML-KEM-768 for
# key establishment, a KEM/DEM envelope type, and deterministic
# seed-based keygen. The GUI keystore uses the same crate so the
# PQC primitives match the vault core's (no version skew).
bv_crypto = { path = "../../crates/bv_crypto" }
# YubiKey PIV client — enumerates connected YubiKeys, reads the
# signing cert in slot 9a, and issues RSA-PKCS1 / ECDSA signatures
# on operator-supplied salts. Used by the YubiKey failsafe unlock
# path in `src-tauri/src/local_keystore.rs`.
yubikey = "0.8"
# Needed for the YubiKey provisioning flow (self-signed X.509 cert
# minted into slot 9a when the operator picks an empty-slot card
# from the Add-Local-Vault modal).
x509-cert = { version = "0.2", features = ["builder"] }
# Cron expression validator for scheduled-exports. Mirrors the dep the
# core crate uses; pulled directly so the Tauri command can validate
# operator input before persisting the schedule.
cron = "0.16"
uuid = { version = "1", features = ["v4"] }
# Pure-Rust SSH client for the Resource Connect SSH session window.
# Same crate the host's files_ssh_sync feature uses for SFTP/SCP
# pushes — no `libssh2-sys` C dep, no OpenSSL footprint.
russh = { version = "0.45", default-features = true }
russh-keys = "0.45"
async-trait = "0.1"
futures-util = "0.3"
log = "0.4"
zeroize = { version = "1", features = ["zeroize_derive"] }
urlencoding = "2"
# Resource Connect RDP transport (Phase 4) — IronRDP via the
# `IronRDP/` git submodule, which is excluded from the host
# workspace and lives on its own `fix-deps` branch. The fork:
#
#   - bumps `picky` from rc.22 to rc.23 in `ironrdp-connector`
#   - bumps `sspi` 0.19 → 0.20 across the workspace
#   - patches `sspi 0.20.0` to its `main` branch SHA so it picks
#     up the picky-rc.23 + stable RustCrypto chain
#
# Net effect: ironrdp's transitive `crypto-common` resolves to
# `0.2.1`, matching the host crate's `digest 0.11` stack via
# `hmac 0.13`. See `IronRDP/Cargo.toml` `[patch.crates-io]`
# section + `crates/ironrdp-connector/Cargo.toml` for the pinned
# rationale.
ironrdp = { git = "https://github.com/ffquintella/IronRDP", branch = "fix-deps", default-features = false, features = ["connector", "session", "graphics", "input", "pdu", "core"] }
ironrdp-async = { git = "https://github.com/ffquintella/IronRDP", branch = "fix-deps" }
ironrdp-tls = { git = "https://github.com/ffquintella/IronRDP", branch = "fix-deps", features = ["rustls"] }
ironrdp-core = { git = "https://github.com/ffquintella/IronRDP", branch = "fix-deps" }
ironrdp-pdu = { git = "https://github.com/ffquintella/IronRDP", branch = "fix-deps" }
ironrdp-tokio = { git = "https://github.com/ffquintella/IronRDP", branch = "fix-deps" }
# Direct dep on sspi so we can pull `ReqwestNetworkClient` for the
# CredSSP smartcard path. The transitive sspi via ironrdp-connector
# would compile without the `network_client` feature here, so we
# pin it explicitly. Same git pin as the IronRDP `[patch.crates-io]`
# uses — Cargo's git deps unify on rev.
sspi = { git = "https://github.com/Devolutions/sspi-rs", rev = "26765bbe1f57f490ba1c37703eda8267c3b2dfb6", default-features = false, features = ["network_client", "aws-lc-rs"] }

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
# Force winapi's "std" feature so winapi::ctypes::c_void unifies with
# std::ffi::c_void. Works around authenticator 0.5.0 Windows build error
# (mismatched types between libc::c_void and winapi::ctypes::c_void).
# See: gui/src-tauri/Cargo.toml, error at authenticator-0.5.0/src/transport/windows/device.rs:144
winapi = { version = "0.3", features = ["std"] }
# Used from the Tauri setup hook to disable WebView2 form autofill, which
# would otherwise persist typed secret values to Chromium's Web Data cache.
# Version pinned to match the transitive dep pulled in by Tauri/wry.
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation"] }

[features]
# Cloud storage targets are on by default in the desktop GUI build so
# the "Cloud Vault" option on the Get Started screen can reach any
# of the four providers without a custom build flag. Server-only
# operators who want a leaner binary can override by disabling the
# cloud_* features at their own workspace level.
default = ["storage_hiqlite", "cloud_targets", "ssh_pqc"]
storage_hiqlite = ["bastion_vault/storage_hiqlite"]
cloud_targets = ["bastion_vault/cloud_targets"]
# Post-quantum SSH certificates (ML-DSA-65). On by default so the
# GUI's `/ssh` page can mint PQC CAs without a custom build flag —
# the PQC code path is gated at sign time, so a build that never
# selects ML-DSA-65 pays no runtime cost.
ssh_pqc = ["bastion_vault/ssh_pqc"]
mcp_local_dev = ["dep:tauri-plugin-mcp-bridge"]
