[package]
name = "bastion-vault-gui"
version = "0.28.6"
edition = "2021"
description = "BastionVault Desktop GUI"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
# Native OS directory-picker used by the Add Local Vault modal so
# operators can browse to the data dir instead of typing the path.
tauri-plugin-dialog = "2"
# Development-only MCP bridge used by local AI assistants for GUI inspection
# and automation. It is optional, feature-gated, and only registered by
# debug builds when BASTION_TAURI_MCP=1 is set.
tauri-plugin-mcp-bridge = { version = "0.12", optional = true }
bastion_vault = { path = "../..", default-features = false }
# Slim client crate: HTTP client + Backend trait. Brought in
# unconditionally because the GUI's Connect-page flows always need it.
# The complementary EmbeddedBackend wrapper around `bastion_vault::core`
# lives in this crate behind the `embedded_vault` feature.
bv-client = { path = "../../crates/bv-client" }
bv_plugin_surface = { path = "../../crates/bv_plugin_surface" }
# rustls is transitively present via the host crate; we list it here
# so the GUI startup can pin the process-level CryptoProvider before
# any TLS-using code runs (rustls 0.23 panics on first use otherwise
# because both `aws_lc_rs` and `ring` end up enabled through feature
# unification across reqwest / ureq / quinn / hyper-rustls).
rustls = { version = "0.23.37", features = ["aws_lc_rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
# Argon2id KDF used by the password-encrypted backup envelope
# (`commands/backup.rs`). Mirrors the host crate's argon2 pin.
argon2 = { version = "0.5", default-features = false, features = ["alloc", "std"] }
# v4's default `v1` feature auto-selects the platform-native store
# (macOS Keychain / Windows Credential Manager / *nix Secret Service),
# replacing v3's explicit apple-native/windows-native/linux-native
# feature flags.
keyring = "4"
chrono = "0.4"
dirs = "6"
hex = "0.4"
sha2 = "0.11"
# CBOR writer for the WebAuthn attestationObject built in
# `commands/fido2_native.rs`. Replaces the unmaintained `serde_cbor`
# (RUSTSEC-2021-0127) and matches the ciborium-based parser the
# server's in-tree FIDO2 RP uses. Note `authenticator` 0.5 still
# pulls serde_cbor transitively.
ciborium = "0.2"
authenticator = { version = "0.5", default-features = false, features = ["crypto_rust"] }
# `base64urlsafedata` (a small standalone crate, no OpenSSL) provides the
# Base64UrlSafeData wrapper used in `commands/fido2_native.rs` for browser
# WebAuthn JSON. We no longer pull `webauthn-rs-proto` here — it was unused.
base64urlsafedata = "0.5"
base64 = "0.22"
# AEAD + KDF + PQC primitives used by the local keystore
# (`src-tauri/src/local_keystore.rs`). ChaCha20-Poly1305 wraps the
# on-disk vault-keys file; HKDF derives sub-keys; ML-KEM provides
# the post-quantum envelope so a future quantum adversary cannot
# retroactively decrypt a captured file even if the symmetric
# master key were somehow recovered. See docs/security-structure.md.
chacha20poly1305 = "0.10"
hkdf = "0.13"
rand = "0.9"
# rand 0.10 is the trait/impl set the `internal-russh-forked-ssh-key`
# fork pins (via rand_core 0.10). The Resource Connect SSH path
# generates ephemeral keypairs via `PrivateKey::random`, which wants a
# `rand_core::CryptoRng` from 0.10 — distinct from the gui's general
# rand 0.9. Imported as `rand_v10` so the two cohabit without ambiguity.
rand_v10 = { package = "rand", version = "0.10" }
# `bv_crypto` re-exports the vault core's PQC stack: ML-KEM-768 for
# key establishment, a KEM/DEM envelope type, and deterministic
# seed-based keygen. The GUI keystore uses the same crate so the
# PQC primitives match the vault core's (no version skew).
bv_crypto = { path = "../../crates/bv_crypto" }
# YubiKey PIV client — enumerates connected YubiKeys, reads the
# signing cert in slot 9a, and issues RSA-PKCS1 / ECDSA signatures
# on operator-supplied salts. Used by the YubiKey failsafe unlock
# path in `src-tauri/src/local_keystore.rs`.
yubikey = "0.8"
# Needed for the YubiKey provisioning flow (self-signed X.509 cert
# minted into slot 9a when the operator picks an empty-slot card
# from the Add-Local-Vault modal).
x509-cert = { version = "0.2", features = ["builder"] }
# Cert extension parsing for the Certificates tab detail panel —
# SubjectAltName (DNS / IP / email / URI), KeyUsage, ExtendedKeyUsage.
# Mirrors the workspace pin in the host crate.
x509-parser = { version = "0.18", features = ["verify"] }
# Cron expression validator for scheduled-exports. Mirrors the dep the
# core crate uses; pulled directly so the Tauri command can validate
# operator input before persisting the schedule.
cron = "0.17"
uuid = { version = "1", features = ["v4"] }
# Pure-Rust SSH client for the Resource Connect SSH session window.
# Same crate the host's files_ssh_sync feature uses for SFTP/SCP
# pushes — no `libssh2-sys` C dep, no OpenSSL footprint.
# `=0.61.1` mirrors the host crate's pin — see the russh comment in the
# workspace root Cargo.toml (RUSTSEC-2026-0153/0154 + rc-line alignment).
russh = { version = "=0.61.1", default-features = true }
async-trait = "0.1"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
zeroize = { version = "1", features = ["zeroize_derive"] }
urlencoding = "2"
# Resource Connect RDP transport (Phase 4) — IronRDP via the
# `IronRDP/` git submodule, which is excluded from the host
# workspace and lives on its own `fix-deps` branch. The fork tracks
# Devolutions master (sspi 0.21 / picky rc.23) plus two local deltas:
#
#   - `ironrdp-connector` accepts PKCS#8 private keys for the
#     smartcard CredSSP path (BastionVault's PKI engine emits PKCS#8)
#   - sspi's `network_client` / `dns_resolver` features stay enabled
#
# The sspi/picky crates themselves are redirected to BastionVault's
# forks via the workspace root `[patch.crates-io]` so they sit on the
# same RustCrypto rc line as russh 0.61 (see root Cargo.toml).
ironrdp = { git = "https://github.com/ffquintella/IronRDP", branch = "fix-deps", default-features = false, features = ["connector", "session", "graphics", "input", "pdu", "core", "dvc", "displaycontrol"] }
ironrdp-async = { git = "https://github.com/ffquintella/IronRDP", branch = "fix-deps" }
ironrdp-tls = { git = "https://github.com/ffquintella/IronRDP", branch = "fix-deps", features = ["rustls"] }
ironrdp-core = { git = "https://github.com/ffquintella/IronRDP", branch = "fix-deps" }
ironrdp-pdu = { git = "https://github.com/ffquintella/IronRDP", branch = "fix-deps" }
ironrdp-tokio = { git = "https://github.com/ffquintella/IronRDP", branch = "fix-deps" }
# Direct dep on sspi so we can pull `ReqwestNetworkClient` for the
# CredSSP smartcard path. The transitive sspi via ironrdp-connector
# would compile without the `network_client` feature here, so we
# pin it explicitly. Resolves to the ffquintella/sspi-rs fork via the
# workspace root `[patch.crates-io]`.
sspi = { version = "0.21", default-features = false, features = ["network_client", "aws-lc-rs"] }
# Used by `commands/pki.rs::pki_import_ca_pkcs12` for PKCS#12 container
# parsing. Pure-Rust PFX/PKCS#12 reader; `pbes1` feature covers the
# legacy Windows-friendly cipher modes (RC2 / 3DES) that openssl had to
# decrypt for us before we removed the C dep entirely.
p12-keystore = { version = "0.3", features = ["pbes1"] }
# PEM (RFC 7468) encoder for the cert / chain / PKCS#8 key blocks
# the PKCS#12 import flow hands back to the server's `pem_bundle`
# splitter. Mirrors the `pem` pin the host crate uses.
pem = "3.0"
# Plugin Extensibility v1 / Phase 4: form-hook sandbox.
# Runs operator-trusted, plugin-supplied WASM bytes inside the Tauri
# backend with the same fuel + memory limits the server's plugin
# runtime uses (256 MiB, 100 M instructions per call). No host
# imports, no DOM access — the only ABI surface is a string-in /
# string-out call over the plugin's linear memory.
# Version-pinned to match the host crate's `wasmtime = "43"` so the
# two crates share a single compiled artifact in the workspace
# build cache.
# `async` is required by the Extensibility v2 app-module runtime
# (`plugin_apps.rs`): the `bvx.api_request` / `bvx.net_http` host imports
# await backend dispatch / HTTPS, so the store is driven with
# `call_async` / `func_wrap_async` (same pattern as the server runtime).
wasmtime = { version = "46", default-features = false, features = ["cranelift", "runtime", "async"] }
# Used by `plugin_hooks::HookError` for `#[derive(Error)]`. Other GUI
# error types historically `impl Display` by hand; the hook runner
# has enough variants that the macro saves a meaningful chunk of
# boilerplate.
thiserror = "2"

[target.'cfg(windows)'.dependencies]
# Force winapi's "std" feature so winapi::ctypes::c_void unifies with
# std::ffi::c_void. Works around authenticator 0.5.0 Windows build error
# (mismatched types between libc::c_void and winapi::ctypes::c_void).
# See: gui/src-tauri/Cargo.toml, error at authenticator-0.5.0/src/transport/windows/device.rs:144
winapi = { version = "0.3", features = ["std"] }
# Used from the Tauri setup hook to disable WebView2 form autofill, which
# would otherwise persist typed secret values to Chromium's Web Data cache.
# Version pinned to match the transitive dep pulled in by Tauri/wry.
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation"] }

[features]
# Cloud storage targets are on by default in the desktop GUI build so
# the "Cloud Vault" option on the Get Started screen can reach any
# of the four providers without a custom build flag. Server-only
# operators who want a leaner binary can override by disabling the
# cloud_* features at their own workspace level.
default = ["embedded_vault", "storage_hiqlite", "cloud_targets", "ssh_pqc"]
# Enables the in-process `EmbeddedBackend` adapter that wraps
# `bastion_vault::core::Core::handle_request`. With this feature off,
# the GUI is a pure remote client (Phase 3 of the decoupling will
# also make `bastion_vault` itself an optional dep).
embedded_vault = []
storage_hiqlite = ["bastion_vault/storage_hiqlite"]
cloud_targets = ["bastion_vault/cloud_targets"]
# Post-quantum SSH certificates (ML-DSA-65). On by default so the
# GUI's `/ssh` page can mint PQC CAs without a custom build flag —
# the PQC code path is gated at sign time, so a build that never
# selects ML-DSA-65 pays no runtime cost.
ssh_pqc = ["bastion_vault/ssh_pqc"]
mcp_local_dev = ["dep:tauri-plugin-mcp-bridge"]

[dev-dependencies]
# `wat` lets the plugin_hooks tests assemble small WAT fixtures
# without dragging the wasmtime `wat` feature into the runtime
# build (which would balloon the GUI binary).
wat = "1"
# ABI-parity guard: the testkit's `bvx` conformance module is
# instantiated against the *real* `plugin_apps` linker so a drift
# between the testkit mock and this runtime fails CI (Phase 6).
bastion-plugin-testkit = { path = "../../crates/bastion-plugin-testkit" }
